// Common

"Error" = "Error";

// Main

"Tickers" = "Tickers";
"Press + to add a ticker" = "Press + to add a ticker";

// Detail

"Last" = "Last";
"Previous" = "Previous";
"Maximum" = "Maximum";
"Minimum" = "Minimum";
"Bid" = "Bid";
"Ask" = "Ask";
"Average" = "Average";
"Volume" = "Volume";
"Name" = "Name";

// Adder

"Add Ticker" = "Add Ticker";
"Search" = "Search";
"No results" = "No results";

// Widget

"No tickers" = "No tickers";
